--- a/DuAn1Client1/nbproject/project.properties
+++ b/DuAn1Client1/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=DuAn1Client1
+application.vendor=lethi
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/DuAn1Client1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn1Client1
+endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
 file.reference.mssql-jdbc-9.4.0.jre8.jar=lib/mssql-jdbc-9.4.0.jre8.jar
@@ -43,8 +45,7 @@ javac.classpath=\
     ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mssql-jdbc-9.4.0.jre8.jar}:\
-    ${file.reference.mysql-connector-java-8.0.13.jar}:\
-    ${libs.CopyLibs.classpath}
+    ${file.reference.mysql-connector-java-8.0.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
